[package]
name = "pxlsspace-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
url = "2.2.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.6"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
hyper-openssl = "0.9.2"
serde_with = "1.12.1"